// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayListItem Snapshot Tests > renders with basic props 1`] = `
<div>
  <div
    class="space-y-1"
  >
    <div
      class="group flex justify-between  hover:opacity-50 transition duration-300 ease-in-out px-0.25 pb-0.5 rounded-lg"
    >
      <div>
        <p
          class="font-medium text-(--color-text) group-hover:text-(--color-text) transition duration-300 ease-in-out"
        >
          Song Title
        </p>
        <p
          class="font-medium text-sm text-(--color-secondary) group-hover:text-(--color-text) transition duration-300 ease-in-out pb-1"
        >
          Artist Name
        </p>
      </div>
      <p
        class="self-center font-medium text-sm text-(--color-secondary) group-hover:text-(--color-text) transition duration-300 ease-in-out"
      >
        0
        :
        3
      </p>
    </div>
  </div>
</div>
`;

exports[`PlayListItem Snapshot Tests > renders with inactive state 1`] = `
<div>
  <div
    class="space-y-1"
  >
    <div
      class="group flex justify-between  hover:opacity-50 transition duration-300 ease-in-out px-0.25 pb-0.5 rounded-lg"
    >
      <div>
        <p
          class="font-medium text-(--color-text) group-hover:text-(--color-text) transition duration-300 ease-in-out"
        >
          Inactive Song
        </p>
        <p
          class="font-medium text-sm text-(--color-secondary) group-hover:text-(--color-text) transition duration-300 ease-in-out pb-1"
        >
          Another Artist
        </p>
      </div>
      <p
        class="self-center font-medium text-sm text-(--color-secondary) group-hover:text-(--color-text) transition duration-300 ease-in-out"
      >
        0
        :
        5
      </p>
    </div>
  </div>
</div>
`;

exports[`PlayListItem Snapshot Tests > renders with long duration (hours) 1`] = `
<div>
  <div
    class="space-y-1"
  >
    <div
      class="group flex justify-between  hover:opacity-50 transition duration-300 ease-in-out px-0.25 pb-0.5 rounded-lg"
    >
      <div>
        <p
          class="font-medium text-(--color-text) group-hover:text-(--color-text) transition duration-300 ease-in-out"
        >
          Long Song
        </p>
        <p
          class="font-medium text-sm text-(--color-secondary) group-hover:text-(--color-text) transition duration-300 ease-in-out pb-1"
        >
          Epic Artist
        </p>
      </div>
      <p
        class="self-center font-medium text-sm text-(--color-secondary) group-hover:text-(--color-text) transition duration-300 ease-in-out"
      >
        1
        :
        1
      </p>
    </div>
  </div>
</div>
`;
